<resources>
    <string name="app_name">VendasMae</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maleta_valor_contido">R$ %.2f</string>
    <string name="maleta_quantidade_itens">Quantidade de itens: %d</string>
    <string name="maleta_esta_com">Está com: %s</string>
    <string name="produto_esta_com">Vendedora</string>
    <string name="produto_valor_format">R$ %.2f</string>
    <string name="tipo_soma_valor">R$ %.2f</string>
    <string name="vendedora_valor_format">R$ %.2f</string>
    <string name="venda_valor_format">R$ %.2f</string>

    <string name="venda_valor_total_p">Venda\n(%.2f%%)</string>
    <string name="venda_lucro_valor_p">Retorno\n(%.2f%%)</string>
    <string name="venda_vendedora_valor_p">Comissão\n(%.2f%%)</string>
    <string name="venda_custo_valor_p">Custo\n(%.2f%%)</string>
</resources>